# fasteinsum

./: CMakeLists.txt  README.md  main.cpp
bmm/: CMakeLists.txt  kernel_performance.csv
bmm/include/: aligned_allocator.h  bmm.h  bmm_blocking.h  bmm_omp.h  hello_bmm.h  kernels.h  wrapper.h
bmm/src/: bmm.cpp  bmm_blocking.cpp  bmm_omp.cpp  bmms.cpp  hello_bmm.cpp  kernel_performance.cpp  kernels.cpp  performance.cpp  pybind11_wrapper.cpp  wrapper.cpp
bmm_lib_example/: CMakeLists.txt
bmm_lib_example/include/: hello_bmm.h
bmm_lib_example/src/: hello_bmm.cpp
catch/: CMakeLists.txt
data/: benchmark_20250301_133702.csv  benchmark_einsum_comparison.csv  einsum_benchmark_comparison_final.csv  einsum_benchmark_comparison_shapes.csv  performance_20250301132841.csv  performance_bmm_comparison.csv  performance_bmm_naive_comparison.csv
einsum_benchmark/: benchmark.py  benchmark_set.py  einsum_bmm.py  test_einsum.py
fast_einsum/: README.md  setup.py
fast_einsum/fast_einsum/: core.py
fast_einsum/tests/: __init__.py  test_einsum.py
integration/: CMakeLists.txt  benchmark.py  benchmark_set.py  bmm_test.py  einsum_bmm.py  einsum_bmm_test.py  einsum_bmm_test2.py  plot.py  pybind11_test.py  size_opt_bmm.py
mm/: CMakeLists.txt  mm_idea.txt
mm/include/: kernel.h  mm.h  mm_performance.h
mm/src/: benchmark_runner.cpp  block_optimizer.cpp  kernel.cpp  kernel_optimizer.cpp  mm.cpp  mm_performance.cpp  temp_test_kernel.cpp
plot/: clean_benchmark_table.py  performance_bmm_omp_comparison.csv  plot_bmm_performance.py  plot_bmm_performance_small.py  plot_einsum_benchmarks.py  plot_einsum_bm_shape.py  plot_einsum_bm_shapes_all.py  plot_kernel_size.py
plot/results/: kernel_size.csv  matrix_shapes.csv  performance_kernel_packing_parallel_comparison.csv
tests/: CMakeLists.txt  catch_tests_bmm.cpp  results.txt  test_bmm.cpp  test_bmm_opt.cpp  test_bmm_trivial.cpp  test_mm.cpp  test_mm_functions.cpp
